--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 710187528233156658
 textchannel = 710187817275228190
-ladderchannel = 
+ladderchannel = 710848012611616818
 jungsanchannel = 
 killchannel = 
 racingchannel = 
