--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,10 +2,10 @@ timezone = 9
 
 voicechannel = 710187528233156658
 textchannel = 710187817275228190
-ladderchannel = 710848012611616818
+ladderchannel = 711230346603266159
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 711230346603266159
 
 before_alert = 1
 before_alert1 = 5
