--- a/command.ini
+++ b/command.ini
@@ -21,9 +21,20 @@ command18 = !현재시간
 command19 = !공지
 command20 = !공지삭제
 command21 = !상태
-command22 = 보스탐, 보스
+command22 = 보스탐
 command23 = !보스탐
 command24 = !킬초기화
 command25 = !킬
 command26 = !킬삭제
 command27 = !경주
+command28 = !채널설정
+command29 = !템초기화
+command30 = !템
+command31 = !템삭제
+command32 = !템차감
+command33 = !킬차감
+command34 = !떠나기
+command35 = !수수료
+command36 = !페이백
+command37 = !가바보
+
