--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,12 @@
 timezone = 9
 
-voicechannel = 710187528233156658
-textchannel = 710187817275228190
-ladderchannel = 711230346603266159
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 711230346603266159
+racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
