--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
-ladderchannel = 
+voicechannel = 710187528233156658
+textchannel = 710187817275228190
+ladderchannel = 711230346603266159
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 711230346603266159
 itemchannel = 
 
 before_alert = 1
