--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 710187528233156658
-textchannel = 710187817275228190
+voicechannel = 
+textchannel = 
 ladderchannel = 711230346603266159
 jungsanchannel = 
 killchannel = 
