--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,10 +2,10 @@ timezone = 9
 
 voicechannel = 
 textchannel = 
-ladderchannel = 711230346603266159
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 711230346603266159
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
