--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 749487220187988028
 textchannel = 749487302446678117
 ladderchannel = 
 jungsanchannel = 
