--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 749487220187988028
-textchannel = 749487302446678117
-ladderchannel = 711230346603266159
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 711230346603266159
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
