--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 749490578227724308
 textchannel = 749490658754035732
 ladderchannel = 
 jungsanchannel = 
