--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 749501852281733212
 textchannel = 749501816781275218
 ladderchannel = 
 jungsanchannel = 
