--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,10 +2,10 @@ timezone = 9
 
 voicechannel = 749501852281733212
 textchannel = 749501816781275218
-ladderchannel = 
+ladderchannel = 711230346603266159
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 711230346603266159
 itemchannel = 
 
 before_alert = 1
