--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 753354116486660207
 ladderchannel = 753354218642997316
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 753354218642997316
 itemchannel = 
 
 before_alert = 1
