--- a/test_setting.ini
+++ b/test_setting.ini
@@ -4,7 +4,7 @@ voicechannel = 753354286515093544
 textchannel = 753354116486660207
 ladderchannel = 753354218642997316
 jungsanchannel = 
-killchannel = 
+killchannel = 753354253933871114
 racingchannel = 753354218642997316
 itemchannel = 
 
