--- a/test_setting.ini
+++ b/test_setting.ini
@@ -3,7 +3,7 @@ timezone = 9
 voicechannel = 753354286515093544
 textchannel = 753354116486660207
 ladderchannel = 753354218642997316
-jungsanchannel = 
+jungsanchannel = 753354234325631036
 killchannel = 753354253933871114
 racingchannel = 753354218642997316
 itemchannel = 753359356560539808
