--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 
 textchannel = 753354116486660207
-ladderchannel = 
+ladderchannel = 753354218642997316
 jungsanchannel = 
 killchannel = 
 racingchannel = 
