--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 753354286515093544
 textchannel = 753354116486660207
 ladderchannel = 753354218642997316
 jungsanchannel = 
