--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,10 +1,10 @@
 timezone = 9
 
-voicechannel = 753354286515093544
-textchannel = 753354116486660207
-ladderchannel = 753354218642997316
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
-killchannel = 753354253933871114
+killchannel = 
 racingchannel = 
 itemchannel = 
 
