--- a/command.ini
+++ b/command.ini
@@ -4,7 +4,7 @@ command01 = !메뉴
 command02 = !설정확인
 command03 = !채널확인
 command04 = !채널이동
-command05 = !소환고장-음성채널디코오류
+command05 = !소환
 command06 = !불러오기
 command07 = !초기화
 command08 = !명치
