--- a/test_setting.ini
+++ b/test_setting.ini
@@ -6,7 +6,7 @@ ladderchannel = 753354218642997316
 jungsanchannel = 
 killchannel = 
 racingchannel = 
-itemchannel = 
+itemchannel = 753359356560539808
 
 before_alert = 1
 before_alert1 = 5
