--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 735832392060895313
 ladderchannel = 762225474750644224
 jungsanchannel = 
 killchannel = 753354253933871114
-racingchannel = 
+racingchannel = 762225474750644224
 itemchannel = 753359356560539808
 
 before_alert = 1
